add dist to gitignore
